# unreal-rust

./: .gitignore  .gitmodules  .ignore  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  Setup.bat  deny.toml  setup.sh
.cargo/: config.toml
RustPlugin/: RustPlugin.uplugin
RustPlugin/Binaries/Win64/: UnrealEditor.modules
RustPlugin/Source/RustEditor/: RustEditor.Build.cs
RustPlugin/Source/RustGameplay/: RustGameplay.Build.cs
RustPlugin/Source/RustMassGatherers/: GatherersAntSimulation.cpp  GatherersAntSimulation.h  GatherersBevyMassCollisionProcessor.cpp  GatherersBevyMassCollisionProcessor.h  GatherersBevyMassSubsystem.cpp  GatherersBevyMassSubsystem.h  GatherersBevyMassVisualizer.cpp  GatherersBevyMassVisualizer.h  GatherersFragments.h  GatherersMassRuntime.cpp  GatherersMassRuntime.h  GatherersProcessors.cpp  GatherersProcessors.h  GatherersSimActivator.cpp  GatherersSimActivator.h  GatherersSubsystem.cpp  GatherersSubsystem.h  GeneratedFragments.h  RustMassGatherers.Build.cs  RustMassGatherers.cpp  RustMassGatherers.h
RustPlugin/Source/RustMassSpike/: RustBobFragment.h  RustBobProcessor.cpp  RustBobProcessor.h  RustMassSpike.Build.cs  RustMassSpike.cpp  RustMassSpike.h  RustMassSpikeActivator.cpp  RustMassSpikeActivator.h  RustMassSpikeSubsystem.cpp  RustMassSpikeSubsystem.h
RustPlugin/Source/RustPlugin/: AnimNotify_RustEvent.cpp  AnimNotify_RustEvent.h  Bindings.cpp  Bindings.h  EntityComponent.cpp  EntityComponent.h  FRustAnimNotifyDetailCustomization.cpp  FRustAnimNotifyDetailCustomization.h  FRustDetailCustomization.cpp  FRustDetailCustomization.h  FUuidGraphPanelPinFactory.cpp  FUuidGraphPanelPinFactory.h  K2Node_GetComponentRust.cpp  K2Node_GetComponentRust.h  RustActor.cpp  RustActor.h  RustBindingsActor.cpp  RustBindingsActor.h  RustClassDef.cpp  RustClassDef.h  RustEvent.cpp  RustEvent.h  RustExtension.cpp  RustExtension.h  RustGameModeBase.cpp  RustGameModeBase.h  (+38 more)
bevy_mass/: Cargo.toml
bevy_mass/src/: components.rs  lib.rs  movement.rs  query.rs  query_all.rs  spatial_group.rs  spatial_query.rs  time.rs
bevy_mass/src/query/: bevy_backend.rs  unreal_backend.rs
docs/: bevy-mass-architecture-options.md  massentity-bridge-design.md  movement-processor-history.md  parallelism-and-component-design.md  rationale-no-runtime-archetype-mutation.md  reflection-performance.md  testing.md  vivarium-porting-roadmap.md
docs/issues/: global-query-copy-overhead.md  lit-mode-motion-blur-artifacts.md  sim-cost-superlinear-at-scale.md
docs/todo/: auto-lift-shadow-components.md  component-derive-and-attribute-cleanup.md  current-state-review.md  dual-mode-dispatch-remaining-shapes.md  entity-group-type-safety.md  existing-fragment-default-values.md  idiomatic-bevy-authoring.md  import-simplification.md  min-specialization-footprint.md  more-rust-authored-tests.md  recreate-physics-state-optimization.md  replace-custom-vector-helpers-with-glam.md  runtime-archetype-mutation.md  shared-decision-system.md  standalone-bevy-runner.md  subsystem-generalization.md  test-facade-coupling.md
gameplay-plugins/unreal-movement/: Cargo.toml
gameplay-plugins/unreal-movement/src/: lib.rs
gatherers-bevy-mass/: Cargo.toml
gatherers-bevy-mass/src/: components.rs  fragments.rs  init.rs  lib.rs  systems.rs  ue_tests.rs
gatherers-sim/: Cargo.toml  build.rs
gatherers-sim/src/: components.rs  diagnostics.rs  ffi.rs  food_decision.rs  fragments.rs  lib.rs  movement.rs
gatherers-standalone/: Cargo.toml
gatherers-standalone/src/: main.rs
scripts/: hot_reload_rebuild_test.sh  hot_reload_smoke_test.sh  pie.cmd  pie.ps1  pie.sh  pre-commit.sh  update_standalone_references.sh  verify_standalone.sh
slash-example/: Cargo.toml
slash-example/src/: lib.rs
unreal-api/: .gitignore  Cargo.toml
unreal-api-derive/: Cargo.toml
unreal-api-derive/src/: component.rs  component_attr.rs  event.rs  lib.rs  mass_fragment.rs  mass_system.rs  reflect.rs  type_uuid.rs  uclass.rs
unreal-api-generator/: Cargo.toml
unreal-api-generator/src/: copy_dll.rs  main.rs  parse_api.rs
unreal-api-generator/src/generator/: mod.rs
unreal-api/src/: api.rs  core.rs  core_data.rs  editor_component.rs  input.rs  lib.rs  log.rs  mass.rs  module.rs  physics.rs  plugin.rs  property.rs  registration.rs  sound.rs
unreal-api/src/bindings/: acl_plugin.rs  acl_plugin_editor.rs  actionable_message.rs  actor.rs  actor_layer_utilities.rs  actor_palette.rs  actor_sequence.rs  add_content_dialog.rs  add_controls_for_selected_py.rs  advanced_preview_scene.rs  advanced_widgets.rs  ai_graph.rs  ai_module.rs  ai_test_suite.rs  alembic_importer.rs  alembic_library.rs  android_file_server.rs  android_file_server_editor.rs  android_media_editor.rs  android_media_factory.rs  android_permission.rs  android_platform_editor.rs  android_runtime_settings.rs  anim_graph.rs  anim_graph_runtime.rs  animation_blueprint_editor.rs  animation_blueprint_library.rs  animation_core.rs  animation_data.rs  animation_data_controller.rs  animation_edit_mode.rs  animation_editor.rs  animation_modifier_library.rs  animation_modifiers.rs  animation_sharing.rs  animation_sharing_ed.rs  animation_warping_editor.rs  animation_warping_runtime.rs  apple_image_utils.rs  apple_image_utils_blueprint_support.rs  (+514 more)
unreal-ffi/: Cargo.toml  build.rs
unreal-ffi/src/: actor.rs  lib.rs  physics.rs  sound.rs  viewport.rs
unreal-module/: Cargo.toml
unreal-module/src/: lib.rs  mass_system_registry.rs
unreal-reflect/: Cargo.toml
unreal-reflect/src/: lib.rs  registry.rs
unreal-rust-example/: Cargo.toml
unreal-rust-example/src/: lib.rs  mass_spike.rs
unreal-rust-host/: Cargo.toml
unreal-rust-host/src/: lib.rs
unreal-rust-loader/: Cargo.toml  build.rs
unreal-rust-loader/src/: lib.rs
vivarium-rust-host/: Cargo.toml
vivarium-rust-host/src/: lib.rs
vivarium-sim/: Cargo.toml  build.rs
vivarium-sim/src/: bird.rs  boundary.rs  brownian.rs  components.rs  config.rs  eating.rs  hunt.rs  lib.rs
vivarium-sim/src/unreal/: init.rs  mod.rs  ue_tests.rs
vivarium-standalone/: Cargo.toml
vivarium-standalone/src/: main.rs
(+36 files in other folders)
