[package]
name = "gatherers-bevy-mass"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "gen-fragments"
path = "src/bin/gen_fragments.rs"

[dependencies]
unreal-api = { path = "../unreal-api" }
bevy_ecs = "0.18"
gatherers-sim = { path = "../gatherers-sim", default-features = false, features = ["unreal"] }

[dev-dependencies]
bevy_mass = { path = "../bevy_mass" }
