[package]
name = "gatherers-sim"
version = "0.1.0"
edition.workspace = true

[features]
default = ["bevy-backend"]
bevy-backend = ["bevy_mass/bevy-backend"]
unreal = ["bevy_mass/unreal", "dep:unreal-api"]
# Enables real `AtomicU64` backing for the decision-outcome diagnostic
# counters. Enabled by `gatherers-bevy-mass` so UE automation tests can
# read them via FFI; stays off in standalone Bevy (counters are inert).
unreal_diag = []

[dependencies]
bevy_mass = { path = "../bevy_mass", default-features = false }
bevy_ecs = "0.18"
glam = "0.29"
unreal-api = { path = "../unreal-api", optional = true }
