[package]
name = "gatherers-standalone"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "gatherers-standalone"
path = "src/main.rs"

[dependencies]
gatherers-sim = { path = "../gatherers-sim", default-features = true }
bevy_mass = { path = "../bevy_mass", default-features = true }
glam = "0.29"

[dependencies.bevy]
version = "0.18"
default-features = false
features = [
  "bevy_winit",
  "bevy_log",
  "bevy_ui_render",
]
