[package]
name = "unreal-api-generator"
version = "0.1.0"
edition.workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = "2"
quote = "1"
proc-macro2 = "1.0"
prettyplease = "0.2"
goblin = "0.10"
heck = "0.5"

