[package]
name = "unreal-api"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition.workspace = true

[dependencies]
bevy_ecs = "0.18"
bevy_app = "0.18"
bevy_time = "0.18"
glam = { version = "0.21", features = ["serde"] }
log = { version = "0.4", features =["std"] }
unreal-api-derive= { path = "../unreal-api-derive" }
unreal-reflect= { path = "../unreal-reflect" }
unreal-ffi= { path = "../unreal-ffi" }

serde = {version = "1", features = ["derive"]}
serde_json = "1"
inventory = "0.3"
