[package]
name = "unreal-ffi"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ecs = "0.9"
glam = "0.21"

[build-dependencies]
cbindgen = "0.29"

