[package]
name = "vivarium-sim"
version = "0.1.0"
edition.workspace = true

[features]
default = ["bevy-backend"]
bevy-backend = ["bevy_mass/bevy-backend"]
unreal = ["bevy_mass/unreal", "dep:unreal-api", "dep:unreal-ffi", "dep:inventory"]

[[bin]]
name = "gen-fragments"
path = "src/bin/gen_fragments.rs"
required-features = ["unreal"]

[dependencies]
bevy_app = "0.18"
bevy_mass = { path = "../bevy_mass", default-features = false }
bevy_ecs = "0.18"
glam = "0.29"
unreal-api = { path = "../unreal-api", optional = true }
unreal-ffi = { path = "../unreal-ffi", optional = true }
inventory = { version = "0.3", optional = true }
