[package]
name = "unreal-movement"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition.workspace = true

[dependencies]
unreal-api = { path = "../../unreal-api"}
unreal-reflect = { path = "../../unreal-reflect" }
bevy_ecs = "0.18"
log = "0.4"

serde = {version = "1", features = ["derive"]}
